<resources>
    <string name="app_name">StrongBox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="common_add">添加</string>
    <string name="common_delete"> 删除</string>
    <string name="common_done">完成</string>
    <string name="common_cancel">取消</string>
    <string name="common_confirm">确定</string>
    <string name="common_alert">警告</string>
    <string name="common_tip">提示</string>
    <string name="common_new">新建</string>
    <string name="common_edit">编辑</string>
    <string name="common_look">查看</string>
    <string name="common_delete_succeed">删除成功</string>
    <string name="common_save_succeed">保存成功</string>
    <string name="common_update_succeed">更新成功</string>
    <string name="common_create_succeed">创建成功</string>

    <string name="select_image_from_file">从相册选择</string>

    <!--  首次登陆 -->
    <string name="first_set_password">首次设置密码</string>
    <string name="number_password">数字密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="can_not_be_null">密码不能为空</string>
    <string name="error_not_same">密码不一致，请重新填写</string>
    <string name="alert_remember_password">请牢记密码 密码丢失将无法进入程序</string>
    <string name="remember_again">再记一下</string>
    <string name="remember_already">记住了</string>

    <!-- 菜单 -->
    <string name="menu_index">首页</string>
    <string name="menu_file">加密文件</string>
    <string name="menu_program">加密程序</string>
    <string name="menu_contact">加密通讯</string>
    <string name="menu_diary">我的日记</string>
    <string name="menu_code_books">密码本</string>
    <string name="menu_help">帮助</string>
    <string name="menu_settings">设置</string>

    <!--  计算器-->
    <string name="error">Error</string>
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="delete">DEL</string>
    <string name="clear">CLR</string>
    <string name="factorial">!</string>
    <string name="div">\u00f7</string>
    <string name="mul">\u00d7</string>
    <string name="plus">+</string>
    <string name="minus">\u2212</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="enter">\u2193</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="pi">\u03c0</string>
    <string name="e">e</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="leftParen">(</string>
    <string name="rightParen">)</string>
    <string name="sqrt">\u221a</string>
    <string name="power">^</string>

    <string name="title_activity_add_main">AddMainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- 加密文件 -->
    <string name="file_add_encrypt_file">添加加密文件</string>
    <string name="file_confirm_encrypt_file">确认加密文件吗？</string>
    <string name="file_old_name">文件原名</string>
    <string name="file_now_name">文件当前名</string>
    <string name="file_encrypt_name">文件加密时间</string>
    <string name="file_delete_file">删除文件</string>
    <string name="file_decryption_file">解密文件</string>
    <string name="message_confirm_delete_file">确认删除文件吗？</string>
    <string name="message_confirm_decryption_file">确认解密文件吗？</string>
    <string name="file_deal_file">文件处理</string>
    
    <!-- 密码本 -->
    <string name="code_book_title">标题 :</string>
    <string name="code_book_userName">用户 :</string>
    <string name="code_book_password">密码 :</string>
    <string name="hint_code_book_title">简要提示</string>
    <string name="hint_code_book_username">输入用户名</string>
    <string name="hint_code_book_password">输入密码(48位之内)</string>
    <string name="hint_code_book_describe">关于密码的备忘信息</string>
    <string name="message_confirm_delete">确认删除吗？</string>

    <!-- 日记 -->
    <string name="hint_diary_title">日记标题</string>
    <string name="hint_diary_content">写下此刻的心情</string>

    <!-- 通讯录-->
    <string name="hint_contact_name">姓名</string>
    <string name="hint_contact_nickname">昵称</string>
    <string name="hint_contact_phone">电话</string>
    <string name="hint_contact_remark">备注</string>
    <string name="hint_contact_email">电子邮箱</string>
    <string name="hint_contact_address">地址</string>
    <string name="hint_contact_company">公司</string>
    <string name="hint_contact_title">职务</string>
    <string name="hint_contact_chat">聊天工具</string>
    <string name="hint_contact_website">网站</string>

    <!--  程序锁 -->
    <string name="program_input_password">请输入密码</string>
    <string name="program_lock_program">加密程序</string>
    <string name="tip_lock_open">程序锁未开启，可在设置中开启</string>
    <string name="message_confirm_unlock">确认解锁该应用吗？</string>


    <!--  设置  -->
    <string name="key_program_lock">key_program_lock</string>
    <string name="key_code_book">key_code_book</string>
    <string name="key_login_code">key_login_code</string>
    <string name="key_lock_permission">key_lock_permission</string>
    <string name="base_settings">基本设置</string>
    <string name="open_program_lock">开启应用锁</string>
    <string name="program_lock_on">应用锁当前状态（开启）</string>
    <string name="program_lock_off">应用锁当前状态（关闭）</string>
    <string name="code_book_settings">设置密码本首页显示</string>
    <string name="code_book_visible">密码本首页密码显示（可见）</string>
    <string name="code_book_invisible">密码本首页密码显示（加密）</string>
    <string name="change_login_code">修改登录密码</string>
    <string name="set_lock_permission">打开应用锁权限</string>
    <string name="thank_for_using">谢谢使用</string>

    <string name="hint_old_password">旧密码</string>
    <string name="hint_new_password">新密码</string>
    <string name="hint_confirm_password">再次填写确认</string>



</resources>
