<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/common_15">

    <EditText
        android:id="@+id/et_old_password"
        style="@style/EditTextTheme"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_old_password"
        android:inputType="numberPassword"
        android:maxLength="8" />

    <EditText
        android:id="@+id/et_new_password"
        style="@style/EditTextTheme"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_new_password"
        android:inputType="numberPassword"
        android:maxLength="8" />

    <EditText
        android:id="@+id/et_confirm_password"
        style="@style/EditTextTheme"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_confirm_password"
        android:inputType="numberPassword"
        android:maxLength="8" />
</LinearLayout>