<?xml version="1.0" encoding="utf-8"?>
<layout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"

        android:orientation="vertical">

        <include layout="@layout/toolbar_edit"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/common_10"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    style="@style/edit_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code_book_title" />

                    <EditText
                        android:id="@+id/et_title"
                        style="@style/EditTextTheme"
                        android:hint="@string/hint_code_book_title"
                        android:lineSpacingExtra="4dp"/>

                </LinearLayout>


                <LinearLayout
                    style="@style/edit_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code_book_userName" />

                    <EditText
                        android:id="@+id/et_userName"
                        style="@style/EditTextTheme"
                        android:hint="@string/hint_code_book_username"
                        android:lineSpacingExtra="0dp" />

                </LinearLayout>


                <LinearLayout
                    style="@style/edit_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code_book_password" />

                    <EditText
                        android:id="@+id/et_password"
                        style="@style/EditTextTheme"
                        android:layout_weight="0.8"
                        android:hint="@string/hint_code_book_password"
                        android:lineSpacingExtra="4dp" />

                    <ImageButton
                        android:id="@+id/ib_change"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/common_5"
                        android:layout_marginLeft="@dimen/common_5"
                        android:background="@null"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/edit_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <EditText
                        android:id="@+id/et_describe"
                        style="@style/EditTextTheme"
                        android:hint="@string/hint_code_book_describe"
                        android:lineSpacingExtra="4dp" />
                </LinearLayout>

                <LinearLayout
                    style="@style/edit_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/common_5"
                    android:paddingRight="@dimen/common_5">

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:paddingBottom="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="5dp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <com.balysv.materialripple.MaterialRippleLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:mrl_rippleColor="?attr/colorPrimary"
            app:mrl_rippleOverlay="true">

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@drawable/delete_button_background"
                android:text="@string/common_delete"
                android:textColor="@android:color/white" />
        </com.balysv.materialripple.MaterialRippleLayout>


    </LinearLayout>
</layout>